--- a/app/styles/Hero.css
+++ b/app/styles/Hero.css
@@ -1,4 +1,16 @@
 /* HERO WRAPPER */
+
+.hero {
+  position: relative;
+  z-index: 1;
+}
+
+.top-hero {
+  position: relative;
+  z-index: 1;
+}
+
+
 .hero {
     background-image: linear-gradient(rgba(43,45,66,0.75), rgba(43,45,66,0.75)),
         url("https://images.unsplash.com/photo-1616469832301-ffaeadc68cf3?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0");
