--- a/app/styles/Portfolio.css
+++ b/app/styles/Portfolio.css
@@ -11,7 +11,12 @@
   height: 100vh;
   text-align: center;
   padding: 0 1.5rem;
+
+  /* ADD THIS ↓ */
+  background: url("https://images.unsplash.com/photo-1471897488648-5eae4ac6686b?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D")
+              center/cover no-repeat;
 }
+
 
 .content-wrapper {
   position: relative;
